--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@prisma/client": "^5.15.0",
+    "@prisma/config": "^7.1.0",
     "next": "16.0.5",
     "next-auth": "^4.24.13",
+    "prisma": "^5.15.0",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.17",
