--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@prisma/client": "^5.15.0",
     "@prisma/config": "^7.1.0",
-    "next": "16.0.5",
+    "@supabase/auth-helpers-nextjs": "^0.15.0",
+    "@supabase/supabase-js": "^2.86.2",
+    "next": "^16.0.7",
     "next-auth": "^4.24.13",
     "prisma": "^5.15.0",
     "react": "19.2.0",
