--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@auth/supabase-adapter": "^1.11.1",
     "@prisma/client": "^5.15.0",
     "@prisma/config": "^7.1.0",
     "@supabase/auth-helpers-nextjs": "^0.15.0",
     "@supabase/supabase-js": "^2.86.2",
     "next": "^16.0.7",
-    "next-auth": "^4.24.13",
+    "next-auth": "^4.24.7",
     "prisma": "^5.15.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
